[package]
name = "patricia-trie"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Merkle-Patricia Trie (Ethereum Style)"
license = "GPL-3.0"

[dependencies]
elastic-array = "0.10"
log = "0.3"
rand = "0.4"
ethereum-types = "0.3"
ethcore-bytes = "0.1.1"
keccak-hash = { version = "0.1.0", git = "https://github.com/paritytech/parity" }
hashdb = { version = "0.1.1", git = "https://github.com/paritytech/parity" }
rlp = { version = "0.2.1", git = "https://github.com/paritytech/parity" }
triehash = { version = "0.1.0", git = "https://github.com/paritytech/parity" }
memorydb = { version = "0.1.0", git = "https://github.com/paritytech/parity" }
ethcore-logger = { version = "1.9.0", git = "https://github.com/paritytech/parity" }

[dev-dependencies]
trie-standardmap = { git = "https://github.com/paritytech/parity" }
